--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -2,8 +2,8 @@ FROM python:3.11-slim
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
-    lsusb \
     usbutils \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
